# google-API-amoCRM

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_clients.py  test_google_auth.py
app/: amocrm_client.py  config.py  google_sheets_client.py  sync_amo_to_sheets.py  sync_sheets_to_amo.py
