[project]
name = "google-api-amocrm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "gspread",
    "oauth2client",
    "httpx",
    "apscheduler",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["credentials*"]
